# GameBoot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_vs2022.bat
lib/glad/: gl.h
src/: MyGameApp.cpp  MyGameApp.h  main.cpp
src/base/: Camera.cpp  Camera.h  EventHooks.cpp  EventHooks.h  GameApp.cpp  GameApp.h  Geometry.cpp  Geometry.h  ShaderProgram.cpp  ShaderProgram.h
